# tools-of-trade

./: .gitignore  README.md  config.yaml  download.sh  pyproject.toml  requirements.txt  start.sh
data/raw/texts/: sample_code.py
jetson_containers/: __init__.py  build.py  ci.py  container.py  db.py  docs.py  l4t_version.py  logging.py  network.py  packages.py  pypi_utils.py  tag.py  utils.py
notebooks/: 01_data_extraction_and_cleaning.ipynb  02_data_formatting_for_finetuning.ipynb  03_finetune_llm.ipynb  04_rag_implementation.ipynb  05_agentic_workflow.ipynb  experiments.ipynb
scripts/: agent.py  agent_tools.py  build_vector_db.py  ingest_data.py  prepare_rag_chunks.py  rag_inference.py  train_llm.py  utils.py
src/quaint/: data.py  main.py  model.py
src/quaint/data_pipeline/: download.py  security.py
src/quaint/utils/: l4t_version.py  logging.py  utils.py
tests/: test_security.py
