[project]
name = "quaint-app"
version = "0.1.0"
description = "An enterprise-grade Edge AI platform for private RAG and agentic services, optimized for Jetson."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer[all]",           # For building the CLI
    "rich",                 # For rich terminal output
    "PyYAML",               # For config management
    "chromadb",             # For local RAG (CortexDB)
    "sentence-transformers",# For embeddings
    "google-generativeai",  # For Gemini API integration
    "python-dotenv",        # For managing environment variables
    "PyMuPDF",              # For PDF processing in data ingestion
    "pdfplumber",           # For PDF processing in data ingestion
    "llama-cpp-python",     # For specialized local models (e.g., perception)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.package-data]
"quaint-app" = ["config.yaml"] # Ensure config.yaml is included in the package

[project.scripts]
quaint = "quaint.main:app"